
<package>
  <name>interaction_cursor_3d</name>
  <version>0.0.3</version>
  <description>Metapackage for interaction cursor functionality.</description>
  <author email="adamleeper@gmail.com">Adam Leeper</author>
  <maintainer email="adamleeper@gmail.com">Adam Leeper</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/interaction_cursor_3d</url>
  <url type="repository">https://github.com/aleeper/interaction_cursor_3d</url>
  <url type="bugtracker">https://github.com/aleeper/interaction_cursor_3d/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interaction_cursor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>razer_hydra</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_fixed_view_controller</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
