<?xml version="1.0"?>
<package>
  <name>interaction_cursor_demo</name>
  <version>0.0.1</version>
  <description>A demo 3D cursor interaction application.</description>

  <author email="adamleeper@gmail.com">Adam Leeper</author>
  <maintainer email="adamleeper@gmail.com">Adam Leeper</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/interaction_cursor_demo</url>
  <url type="repository">https://github.com/aleeper/ros_3d_interaction_cursor</url>
  <url type="bugtracker">https://github.com/aleeper/ros_3d_interaction_cursor/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interaction_cursor_msgs</build_depend>
  <build_depend>razer_hydra</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interaction_cursor_msgs</run_depend>
  <run_depend>razer_hydra</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  
  </export>

</package>
