<?xml version="1.0"?>
<package>
  <name>interaction_cursor_demo</name>
  <version>0.0.3</version>
  <description>A demo 3D cursor interaction application.</description>

  <author email="adamleeper@gmail.com">Adam Leeper</author>
  <maintainer email="adamleeper@gmail.com">Adam Leeper</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/interaction_cursor_demo</url>
  <url type="repository">https://github.com/aleeper/interaction_cursor_3d</url>
  <url type="bugtracker">https://github.com/aleeper/interaction_cursor_3d/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interaction_cursor_msgs</build_depend>
  <build_depend>razer_hydra</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interaction_cursor_msgs</run_depend>
  <run_depend>interactive_marker_tutorials</run_depend>
  <run_depend>razer_hydra</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz_fixed_view_controller</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>

</package>
