<?xml version="1.0"?>
<package>
  <name>interaction_cursor_msgs</name>
  <version>0.0.1</version>
  <description>The interaction_cursor_msgs package</description>

  <author email="adamleeper@gmail.com">Adam Leeper</author>
  <maintainer email="adamleeper@gmail.com">Adam Leeper</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/interaction_cursor_msgs</url>
  <url type="repository">https://github.com/aleeper/ros_3d_interaction_cursor</url>
  <url type="bugtracker">https://github.com/aleeper/ros_3d_interaction_cursor/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>

</package>
