<?xml version="1.0"?>
<package>
  <name>interaction_cursor_msgs</name>
  <version>0.0.2</version>
  <description>
    A message API for implementing a 6-DOF interaction cursor.
    A minimal implementation has one node that handles the user device I/O and
    another node (e.g. a plugin in Rviz) that uses the messages to interact with
    a marker.
  </description>

  <author email="adamleeper@gmail.com">Adam Leeper</author>
  <maintainer email="adamleeper@gmail.com">Adam Leeper</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/interaction_cursor_msgs</url>
  <url type="repository">https://github.com/aleeper/interaction_cursor_3d</url>
  <url type="bugtracker">https://github.com/aleeper/interaction_cursor_3d/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>

  </export>

</package>
